# python-i2c-sen68

./: .buildinfo  .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.rst  README.md  api.html  build-documentation.html  development.html  execute-measurements.html  genindex.html  index.html  installation.html  metadata.yml  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  run-tests.html  search.html  searchindex.js  setup.cfg  setup.py
_modules/: index.html
_modules/sensirion_i2c_sen68/: commands.html  device.html  result_types.html
_sources/: index.rst.txt
docs/: api.rst  conf.py  execute-measurements.rst  installation.rst  run-tests.rst
examples/: example_usage_linux_sen68.py  example_usage_sensorbridge_sen68.py
sensirion_i2c_sen68/: __init__.py  commands.py  device.py  response_provider.py  result_types.py  version.py
tests/: conftest.py  test_sen68.py
